syntax = "proto3";
package msg;

// 游戏消息
message GameMsg {

    string uid = 1; // 用户ID
    string boardID = 2; // 棋局ID
    string call = 3; // 调用方法
    bytes data = 4; // 提交的数据
}