syntax = "proto3";
package msg;

message RespMsg {

    string uid = 1; // 用户ID
    enum Code {
        Done = 0; // 完成
        Failed = 1; // 失败
    }
    Code code = 2; // 状态码
    bytes data = 3; // 数据
}